@@ -98,7 +98,7 @@ gdb_expect {
     timeout           { fail "(timeout) v_int+=57" }    
   }
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (2)"
 
 send_gdb "print v_int-=57\n"
 gdb_expect {
@@ -116,7 +116,7 @@ gdb_expect {
     timeout           { fail "(timeout) v_int-=57" }    
   }
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (3)"
 
 send_gdb "print v_int*=5\n"
 gdb_expect {
@@ -134,7 +134,7 @@ gdb_expect {
     timeout           { fail "(timeout) v_int*=5" }    
   }
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (4)"
 
 send_gdb "print v_int/=4\n"
 gdb_expect {
@@ -154,7 +154,7 @@ gdb_expect {
 
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (5)"
 
 send_gdb "print v_int%=4\n"
 gdb_expect {
@@ -174,7 +174,7 @@ gdb_expect {
 
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (6)"
 
 
 
@@ -195,7 +195,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (7)"
 
 
 
@@ -216,7 +216,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (8)"
 
 
 
@@ -237,7 +237,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (9)"
 
 
 
@@ -258,7 +258,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (10)"
 
 
 
@@ -279,7 +279,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (11)"
 
 
 
@@ -300,7 +300,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (12)"
 
 
 
@@ -321,7 +321,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (13)"
 
 
 
@@ -342,7 +342,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (14)"
 
 
 
@@ -363,7 +363,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (15)"
 
 
 
@@ -384,7 +384,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (16)"
 
 
 send_gdb "print v_int+=v_unsigned_long\n"
@@ -404,7 +404,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (17)"
 
 
 send_gdb "print v_int+=v_float\n"
@@ -424,7 +424,7 @@ gdb_expect {
   }
 
 
-gdb_test "set variable v_int = 6" "" "set v_int to 6"
+gdb_test "set variable v_int = 6" "" "set v_int to 6 (18)"
 
 
 send_gdb "print v_int+=v_double\n"
